[metadata]
# replace with your username:
name = cepimose
version = 0.1.8
author = sledilnik.org
author_email = info@sledilnik.org
description = A small example package to get raw data from NIJZ vaccinations dashboard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sledilnik/py-cepimose
project_urls =
    Bug Tracker = https://github.com/sledilnik/py-cepimose/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.packages.find]
where = .
